add category creation functionality

--- a/tasks/templates/categories.html
+++ b/tasks/templates/categories.html
@@ -8,6 +8,7 @@
       main {
         display: flex;
         flex-direction: column;
+        max-width: 600px;
       }
       .form {
         display: flex !important;
