--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -248,7 +248,7 @@
     </section>
   </footer>
   <script src="{% static 'js/main.js' %}"></script>
-  {% comment %} <script >
+  <script >
     document.addEventListener('DOMContentLoaded', function() {
       const form = document.getElementById('filters');
       const radios = form.querySelectorAll('input[type="radio"]');
@@ -264,6 +264,6 @@
         form.submit();
       });
     });
-  </script> {% endcomment %}
+  </script>
  </body>
 </html>
