--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -37,7 +37,6 @@
               <label for="">Completed</label>
             </div>
           </div>
-          
           <div class="category p-1">
             <span>Category: </span>
             <select name="category" id="category">
@@ -50,10 +49,10 @@
         </form>
       </section>
     </header>
-    <main class="flex max-w-full">
+    <main class="flex max-w-full overflow-y-scroll">
       <section class="flex w-1/2 flex-col bg-clip-border rounded-xl bg-white text-gray-700 h-[calc(100vh-2rem)] max-w-[20rem] p-4 shadow-xl shadow-blue-gray-900/5">
 			  <div class="mb-2 p-4">
-          <h5 class="block antialiased tracking-normal font-sans text-xl font-semibold leading-snug text-gray-900">home</h5>
+          <p>tags</p>
 			  </div>
 			  <nav class="flex flex-col gap-1 min-w-[240px] p-2 font-sans text-base font-normal text-gray-700">
           <div role="button" tabindex="0" class="flex items-center w-full p-3 rounded-lg text-start leading-tight transition-all hover:bg-blue-50 hover:bg-opacity-80 focus:bg-blue-50 focus:bg-opacity-80 active:bg-blue-50 active:bg-opacity-80 hover:text-blue-900 focus:text-blue-900 active:text-blue-900 outline-none">
@@ -66,9 +65,16 @@
             <a href="{% url 'tasks:create' %}">Create new task</a>
           </div>
           <div role="button" tabindex="0" class="flex items-center w-full p-3 rounded-lg text-start leading-tight transition-all hover:bg-blue-50 hover:bg-opacity-80 focus:bg-blue-50 focus:bg-opacity-80 active:bg-blue-50 active:bg-opacity-80 hover:text-blue-900 focus:text-blue-900 active:text-blue-900 outline-none">
-            <div class="grid place-items-center mr-4">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" class="h-5 w-5">
-                <path fill-rule="evenodd" d="M11.078 2.25c-.917 0-1.699.663-1.85 1.567L9.05 4.889c-.02.12-.115.26-.297.348a7.493 7.493 0 00-.986.57c-.166.115-.334.126-.45.083L6.3 5.508a1.875 1.875 0 00-2.282.819l-.922 1.597a1.875 1.875 0 00.432 2.385l.84.692c.095.078.17.229.154.43a7.598 7.598 0 000 1.139c.015.2-.059.352-.153.43l-.841.692a1.875 1.875 0 00-.432 2.385l.922 1.597a1.875 1.875 0 002.282.818l1.019-.382c.115-.043.283-.031.45.082.312.214.641.405.985.57.182.088.277.228.297.35l.178 1.071c.151.904.933 1.567 1.85 1.567h1.844c.916 0 1.699-.663 1.85-1.567l.178-1.072c.02-.12.114-.26.297-.349.344-.165.673-.356.985-.57.167-.114.335-.125.45-.082l1.02.382a1.875 1.875 0 002.28-.819l.923-1.597a1.875 1.875 0 00-.432-2.385l-.84-.692c-.095-.078-.17-.229-.154-.43a7.614 7.614 0 000-1.139c-.016-.2.059-.352.153-.43l.84-.692c.708-.582.891-1.59.433-2.385l-.922-1.597a1.875 1.875 0 00-2.282-.818l-1.02.382c-.114.043-.282.031-.449-.083a7.49 7.49 0 00-.985-.57c-.183-.087-.277-.227-.297-.348l-.179-1.072a1.875 1.875 0 00-1.85-1.567h-1.843zM12 15.75a3.75 3.75 0 100-7.5 3.75 3.75 0 000 7.5z" clip-rule="evenodd"></path>
+            <div class="grid place-items-center mr-2">
+              <?xml version="1.0" encoding="utf-8"?>
+              <svg width="30px" height="25px" viewBox="0 0 1192 1024" class="icon"  version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M212 32h600c32.8 0 60 27.2 60 60v840c0 32.8-27.2 60-60 60h-600c-32.8 0-60-27.2-60-60v-840C152 59.2 179.2 32 212 32z" fill="#FFFFFF" />
+                <path d="M414.4 876H271.2c-10.4 0-19.2-8.8-19.2-19.2V713.6c0-10.4 8.8-19.2 19.2-19.2h143.2c10.4 0 19.2 8.8 19.2 19.2v143.2c0 10.4-8.8 19.2-19.2 19.2z" fill="#FFFFFF" />
+                <path d="M812 1000h-600c-37.6 0-68-30.4-68-68v-840C144 54.4 174.4 24 212 24h600c37.6 0 68 30.4 68 68v840c0 37.6-30.4 68-68 68zM212 40C183.2 40 160 63.2 160 92v840c0 28.8 23.2 52 52 52h600c28.8 0 52-23.2 52-52v-840c0-28.8-23.2-52-52-52h-600z" fill="#6A576D" /><path d="M414.4 330.4H271.2c-10.4 0-19.2-8.8-19.2-19.2v-144c0-10.4 8.8-19.2 19.2-19.2h143.2c10.4 0 19.2 8.8 19.2 19.2v143.2c0 11.2-8.8 20-19.2 20z" fill="#82CFCD" />
+                <path d="M414.4 338.4H271.2c-15.2 0-27.2-12-27.2-27.2v-144c0-15.2 12-27.2 27.2-27.2h143.2c15.2 0 27.2 12 27.2 27.2v143.2c0 15.2-12 28-27.2 28zM271.2 156c-6.4 0-11.2 4.8-11.2 11.2v143.2c0 6.4 4.8 11.2 11.2 11.2h143.2c6.4 0 11.2-4.8 11.2-11.2V167.2c0-6.4-4.8-11.2-11.2-11.2H271.2z" fill="#6A576D" />
+                <path d="M414.4 603.2H271.2c-10.4 0-19.2-8.8-19.2-19.2V440c0-10.4 8.8-19.2 19.2-19.2h143.2c10.4 0 19.2 8.8 19.2 19.2v144c0 10.4-8.8 19.2-19.2 19.2z" fill="#82CFCD" /><path d="M414.4 611.2H271.2c-15.2 0-27.2-12-27.2-27.2V440c0-15.2 12-27.2 27.2-27.2h143.2c15.2 0 27.2 12 27.2 27.2v144c0 14.4-12 27.2-27.2 27.2zM271.2 428.8c-6.4 0-11.2 4.8-11.2 11.2v144c0 6.4 4.8 11.2 11.2 11.2h143.2c6.4 0 11.2-4.8 11.2-11.2V440c0-6.4-4.8-11.2-11.2-11.2H271.2zM414.4 884H271.2c-15.2 0-27.2-12-27.2-27.2V713.6c0-15.2 12-27.2 27.2-27.2h143.2c15.2 0 27.2 12 27.2 27.2v143.2c0 15.2-12 27.2-27.2 27.2zM271.2 701.6c-6.4 0-11.2 4.8-11.2 11.2V856c0 6.4 4.8 11.2 11.2 11.2h143.2c6.4 0 11.2-4.8 11.2-11.2V713.6c0-6.4-4.8-11.2-11.2-11.2H271.2zM414.4 338.4H271.2c-15.2 0-27.2-12-27.2-27.2v-144c0-15.2 12-27.2 27.2-27.2h143.2c15.2 0 27.2 12 27.2 27.2v143.2c0 15.2-12 28-27.2 28zM271.2 156c-6.4 0-11.2 4.8-11.2 11.2v143.2c0 6.4 4.8 11.2 11.2 11.2h143.2c6.4 0 11.2-4.8 11.2-11.2V167.2c0-6.4-4.8-11.2-11.2-11.2H271.2z" fill="#6A576D" />
+                <path d="M414.4 611.2H271.2c-15.2 0-27.2-12-27.2-27.2V440c0-15.2 12-27.2 27.2-27.2h143.2c15.2 0 27.2 12 27.2 27.2v144c0 14.4-12 27.2-27.2 27.2zM271.2 428.8c-6.4 0-11.2 4.8-11.2 11.2v144c0 6.4 4.8 11.2 11.2 11.2h143.2c6.4 0 11.2-4.8 11.2-11.2V440c0-6.4-4.8-11.2-11.2-11.2H271.2zM414.4 884H271.2c-15.2 0-27.2-12-27.2-27.2V713.6c0-15.2 12-27.2 27.2-27.2h143.2c15.2 0 27.2 12 27.2 27.2v143.2c0 15.2-12 27.2-27.2 27.2zM271.2 701.6c-6.4 0-11.2 4.8-11.2 11.2V856c0 6.4 4.8 11.2 11.2 11.2h143.2c6.4 0 11.2-4.8 11.2-11.2V713.6c0-6.4-4.8-11.2-11.2-11.2H271.2zM768 247.2H548c-4.8 0-8-3.2-8-8s3.2-8 8-8H768c4.8 0 8 3.2 8 8s-3.2 8-8 8z" fill="#6A576D" />
+                <path d="M768 520H548c-4.8 0-8-3.2-8-8s3.2-8 8-8H768c4.8 0 8 3.2 8 8s-3.2 8-8 8z" fill="#6A576D" />
+                <path d="M766.4 792.8H546.4c-4.8 0-8-3.2-8-8s3.2-8 8-8h220c4.8 0 8 3.2 8 8s-4 8-8 8z" fill="#6A576D" />
               </svg>
             </div>
             <a href="{% url 'tasks:index' %}">Taks list</a>
@@ -84,18 +90,26 @@
           <div role="button" tabindex="0" class="flex items-center w-full p-3 rounded-lg text-start leading-tight transition-all hover:bg-blue-50 hover:bg-opacity-80 focus:bg-blue-50 focus:bg-opacity-80 active:bg-blue-50 active:bg-opacity-80 hover:text-blue-900 focus:text-blue-900 active:text-blue-900 outline-none">
             <div class="grid place-items-center mr-4">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" class="h-5 w-5">
-                <path fill-rule="evenodd" d="M12 2.25a.75.75 0 01.75.75v9a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM6.166 5.106a.75.75 0 010 1.06 8.25 8.25 0 1011.668 0 .75.75 0 111.06-1.06c3.808 3.807 3.808 9.98 0 13.788-3.807 3.808-9.98 3.808-13.788 0-3.808-3.807-3.808-9.98 0-13.788a.75.75 0 011.06 0z" clip-rule="evenodd"></path>
-            </svg>
+                <path fill-rule="evenodd" d="M11.078 2.25c-.917 0-1.699.663-1.85 1.567L9.05 4.889c-.02.12-.115.26-.297.348a7.493 7.493 0 00-.986.57c-.166.115-.334.126-.45.083L6.3 5.508a1.875 1.875 0 00-2.282.819l-.922 1.597a1.875 1.875 0 00.432 2.385l.84.692c.095.078.17.229.154.43a7.598 7.598 0 000 1.139c.015.2-.059.352-.153.43l-.841.692a1.875 1.875 0 00-.432 2.385l.922 1.597a1.875 1.875 0 002.282.818l1.019-.382c.115-.043.283-.031.45.082.312.214.641.405.985.57.182.088.277.228.297.35l.178 1.071c.151.904.933 1.567 1.85 1.567h1.844c.916 0 1.699-.663 1.85-1.567l.178-1.072c.02-.12.114-.26.297-.349.344-.165.673-.356.985-.57.167-.114.335-.125.45-.082l1.02.382a1.875 1.875 0 002.28-.819l.923-1.597a1.875 1.875 0 00-.432-2.385l-.84-.692c-.095-.078-.17-.229-.154-.43a7.614 7.614 0 000-1.139c-.016-.2.059-.352.153-.43l.84-.692c.708-.582.891-1.59.433-2.385l-.922-1.597a1.875 1.875 0 00-2.282-.818l-1.02.382c-.114.043-.282.031-.449-.083a7.49 7.49 0 00-.985-.57c-.183-.087-.277-.227-.297-.348l-.179-1.072a1.875 1.875 0 00-1.85-1.567h-1.843zM12 15.75a3.75 3.75 0 100-7.5 3.75 3.75 0 000 7.5z" clip-rule="evenodd"></path>
+              </svg>
+            </div>
+            <a href="{% url 'tasks:logout' %}">settings</a>
           </div>
-          <a href="{% url 'tasks:logout' %}">Logout</a>
-				</div>
-      </nav>
-    </section>
-    {% block tasks %}
-    <section class="flex flex-wrap justify-center w-full">
-      {% for task in tasks %}
-      <article class="grid place-content-center">
-        <div class="flex items-center justify-center min-h-screen min-w-screen">
+          <div role="button" tabindex="0" class="flex items-center w-full p-3 rounded-lg text-start leading-tight transition-all hover:bg-blue-50 hover:bg-opacity-80 focus:bg-blue-50 focus:bg-opacity-80 active:bg-blue-50 active:bg-opacity-80 hover:text-blue-900 focus:text-blue-900 active:text-blue-900 outline-none">
+            <div class="grid place-items-center mr-4">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" class="h-5 w-5">
+                <path fill-rule="evenodd" d="M12 2.25a.75.75 0 01.75.75v9a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM6.166 5.106a.75.75 0 010 1.06 8.25 8.25 0 1011.668 0 .75.75 0 111.06-1.06c3.808 3.807 3.808 9.98 0 13.788-3.807 3.808-9.98 3.808-13.788 0-3.808-3.807-3.808-9.98 0-13.788a.75.75 0 011.06 0z" clip-rule="evenodd"></path>
+              </svg>
+            </div>
+            <a href="{% url 'tasks:logout' %}">Logout</a>
+          </div>
+        </nav>
+      </section>
+      {% block tasks %}
+      <section class="flex flex-wrap gap-7 justify-center w-full">
+        {% for task in tasks %}
+        <article class="grid place-content-center">
+          <div class="flex items-center justify-center min-h-screen min-w-screen">
             <div class="relative min-w-[400px] max-w-[400px] min-h-[500px] max-h-[500px] border border-black bg-gray-100 drop-shadow-2xl">
               <div class="absolute flex flex-col w-full space-y-6 py-6">
                 <h1 class="text-center">{{task.title}}</h1>
@@ -104,24 +118,24 @@
                     <p class="break-words p-1">{{task.description}}</p>
                   </div>
                 </div>
-                  <hr class="border-zinc-400 mx-2" />
-                  <hr class="border-zinc-400 mx-2" />
-                  <hr class="border-zinc-400 mx-2" />
-                  <hr class="border-zinc-400 mx-2" />
-                  <hr class="border-zinc-400 mx-2" />
-                  <hr class="border-zinc-400 mx-2" />
-                  <hr class="border-zinc-400 mx-2" />
-                  <hr class="border-zinc-400 mx-2" />
-                  <hr class="border-zinc-400 mx-2" />
-                  <hr class="border-zinc-400 mx-2" />
-                  <hr class="border-zinc-400 mx-2" />
-                  <hr class="border-zinc-400 mx-2" />
-                  <hr class="border-zinc-400 mx-2" />
-                  <hr class="border-zinc-400 mx-2" />
-                  <hr class="border-zinc-400 mx-2" />
+                <hr class="border-zinc-400 mx-2" />
+                <hr class="border-zinc-400 mx-2" />
+                <hr class="border-zinc-400 mx-2" />
+                <hr class="border-zinc-400 mx-2" />
+                <hr class="border-zinc-400 mx-2" />
+                <hr class="border-zinc-400 mx-2" />
+                <hr class="border-zinc-400 mx-2" />
+                <hr class="border-zinc-400 mx-2" />
+                <hr class="border-zinc-400 mx-2" />
+                <hr class="border-zinc-400 mx-2" />
+                <hr class="border-zinc-400 mx-2" />
+                <hr class="border-zinc-400 mx-2" />
+                <hr class="border-zinc-400 mx-2" />
+                <hr class="border-zinc-400 mx-2" />
+                <hr class="border-zinc-400 mx-2" />
                 <div class="relative flex justify-between">
-                    <label class="">
-                      <input type="checkbox" {% if task.completed %}
+                  <label class="">
+                    <input type="checkbox" {% if task.completed %}
                       checked
                       {% endif %}>
                       {% if task.completed  %}
@@ -133,12 +147,12 @@
                     </label>
                     <a href="{% url 'tasks:update' task.id %}">Edit</a>
                     <a href="{% url 'tasks:delete' task.id %}" onclick="javascript: return confirm('Are you sure?')">Delete</a>
+                  </div>
                 </div>
-              </div>
-             </article>
+              </article>
         {% endfor %}
-       {% endblock %}
       </section>
+      {% endblock %}
     </main>
     
     <footer class="flex flex-row items-end w-full bg-gray-900">
