--- a/theme/templates/task/create.html
+++ b/theme/templates/task/create.html
@@ -7,23 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Create Task</title>
   </head>
-  <body>
-    
-    <form action="" method="post">
-      {% csrf_token %}
-      {{error_messages}}
-      {{ form }}
-      
-      <button type="submit">{% if id %}Update{% else %} Create{% endif %} </button>
-      <button onclick="goBack();">Cancel</button>
-      
-    </form>
-    <script>
-      function goBack(){
-        window.location = "/tasks"
-      }
-    </script>
+  <body class="grid place-content-center">
+    <section class="flex flex-col justify-center gap-5 w-screen">
+      <form action="" method="post" class="flex justify-center gap-7">
+        <div>
+          {% csrf_token %}
+          {{error_messages}}
+          {{ form }}
+          
+          <button type="submit">{% if id %}Update{% else %} Create{% endif %} </button>
+          <button onclick="goBack();">Cancel</button>
+        </div>
+      </form>
+    </section>
   </body>
-  </html>
+  <script src='js/location.js'></script>
   {% endblock %}
+  </html>
   
