register.html centrado

--- a/theme/templates/task/register.html
+++ b/theme/templates/task/register.html
@@ -1,17 +1,21 @@
+{% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% tailwind_css %}
     <title>Signup</title>
 </head>
-<body>
-    <h1>Signup</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Signup</button>
-    </form>
+<body class="box-content grid place-content-center h-svh w-svw">
+    <section class="flex flex-col justify-center">
+        <h1 class="text-center">Signup</h1>
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Signup</button>
+        </form>
+    </section>
 </body>
 </html>
